--- a/index.html
+++ b/index.html
@@ -22,17 +22,19 @@
     </header>
 
     <main>
-        <img src="img/Illustration 3.svg" alt="We care">
+        <aside>
+            <img src="img/Illustration 3.svg" alt="We care" title="we care about your pet">
+        </aside>
         <section>
             <h1>WE CARE</h1>
             <h2>About Your Pet</h2>
-            <p>Lorem ipsum dolor sit amet consecteturad
+            <p>
+                Lorem ipsum dolor sit amet consecteturad
                 cing elit aenean a justo quis mauris hendri
-                pellentesque eget at ipsumuis cursusturpi.</p>
+                pellentesque eget at ipsumuis cursusturpi.
+            </p>
             <button>EXPLORE</button>
         </section>
-
     </main>
 </body>
-
 </html>
