--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <nav>
+        <nav class="navbar">
             <a href="#">HOME</a>
             <a href="#">ABOUT</a>
             <a href="#">PRODUCT</a>
